--- a/lib/generators/project/Rakefile
+++ b/lib/generators/project/Rakefile
@@ -25,7 +25,7 @@ task :deps do
           'rspec' => ">= 1.1.12"}
 
   deps.each_pair do |dep, version|
-    puts "installing #{dep}"
+    puts "\ninstalling #{dep} (#{version})"
     system("gem install #{dep} --version '#{version}' -i gems --no-rdoc --no-ri")
   end
 
