--- a/lib/generators/project/Rakefile
+++ b/lib/generators/project/Rakefile
@@ -19,7 +19,7 @@ end
 desc "freeze deps"
 task :deps do 
 
-  deps = {'cucumber' => ">= 0.1.16", 
+  deps = {'cucumber' => "= 0.1.16", 
           'webrat' => ">= 0.4.2", 
           'mechanize' => ">= 0.9.1", 
           'rspec' => ">= 1.1.12"}
