skip installing deps if they're already installed, unless force is specified

--- a/lib/generators/project/Rakefile
+++ b/lib/generators/project/Rakefile
@@ -27,6 +27,9 @@ task :deps do
   puts "\ninstalling dependencies. this will take a few minutes."
 
   deps.each_pair do |dep, version|
+    if Dir.glob("gems/gems/#{dep}-#{version.split.last}").size > 0
+      next unless ENV["FORCE"]
+    end
     puts "\ninstalling #{dep} (#{version})"
     system("gem install #{dep} --version '#{version}' -i gems --no-rdoc --no-ri")
   end
