--- a/lib/generators/project/.bzrignore
+++ b/lib/generators/project/.bzrignore
@@ -1,6 +1,7 @@
 .DS_Store
 *~
 .#*
-gems/specifications/*
-gems/gems/*
-gems/bin/*
+vendor/gems/specifications/*
+vendor/gems/gems/*
+vendor/gems/bin/*
+vendor/gems/environment.rb
