--- a/lib/generators/project/Gemfile
+++ b/lib/generators/project/Gemfile
@@ -1,6 +1,6 @@
 # list of dependencies for a cucumber-nagios project
 
-#gem "bundler", "0.6.0"
+gem "cucumber-nagios", "0.7.0"
 gem "cucumber", "0.6.1"
 gem "rspec", "1.3.0"
 gem "webrat", "0.7.0"
